@@ -24,6 +24,9 @@ Release 1.1.3 (in development)
 
 * #862: Fix handling of ``-D`` and ``-A`` options on Python 3.
 
+* #851: Recognize and warn about circular toctrees, instead of running
+  into recursion errors.
+
 
 Release 1.1.2 (Nov 1, 2011) -- 1.1.1 is a silly version number anyway!
 ======================================================================
